v.1.1.3: Fix spacing in CodeBlock and PropertyTable components

--- a/src/components/CodeBlock/code-block.module.scss
+++ b/src/components/CodeBlock/code-block.module.scss
@@ -40,7 +40,7 @@
 			    min-width: 100%;
 			}
 			margin: 0;
-			padding-bottom: 1rem;
+			// padding-bottom: 1rem;
 			flex-grow: 1;
 			overflow-x: auto;
 			height: 100%;
